@startuml
'https://plantuml.com/sequence-diagram
title TO ESTIMATE THE EFFORT OF A USER STORY
legend top
US021 - As Team Member, I want to estimate the effort of a user story in a sprint, during the sprint planning ceremony.
end legend
skinparam sequenceMessageAlign center

class "EstimateUserStoryEffortController" {
- company
+ estimateEffortUserStory(userStoryDto, effort, projectDto, date)
}

class "Company" {
- projectContainer
+ estimateEffortUserStory(userStoryDto, effort, projectDto, date)
}
class "ProjectContainer" {
- projects
+ estimateEffortUserStory(userStoryDto, effort, projectCode, date)
- getProjectByCode(projectCode)
}
class "Project"{
- sprints
+ estimateEffortUserStory(userStoryDto, effort, date)
}
class "Sprint"{
- sprintBacklog
+ estimateEffortUserStory(userStoryDto, effort, date)
+ isDateWithinPeriod(date)
}
class "SprintBacklog" {
- userStories
+ estimateEffortUserStory(userStoryDto, effort)
+ hasUserStoryNumber(userStoryNumber)
+ setEffort(effort)
}
class "UserStory"{
- effort
+ getEffort()
+ setEffort(effortEstimate)
}
enum "Effort"{
- effortValue
+ Effort(effortValue)
}

"EstimateUserStoryEffortController" "1" --> "1" "Company" : has
"Company" "1" --> "1" "ProjectContainer" : has
"ProjectContainer" "1" --> "*" "Project" : contains
"Project" "1" --> "*" "Sprint" : has
"Sprint" "1" --> "1" "SprintBacklog" : contains
"SprintBacklog" "1" --> "*" "UserStory" : contains
"UserStory" "1" --> "1" "Effort" : has
@enduml